added single weightclass

--- a/templates/competitions/competition_detail.html
+++ b/templates/competitions/competition_detail.html
@@ -513,14 +513,16 @@
                                             <tr class="event-row">
                                                 <td class="ps-3">
                                                     <strong>
-                                                        {% if row.weight_class.weight_d == "u" %}
-                                                            u{{ row.weight_class.name|floatformat:"-1" }}
-                                                        {% elif row.weight_class.weight_d == "+" %}
-                                                            {{ row.weight_class.name|floatformat:"-1" }}{{ row.weight_class.weight_d }}
-                                                        {% else %}
-                                                            {{ row.weight_class.name|floatformat:"-1" }}
-                                                        {% endif %}
-                                                    </strong>
+          {% if row.weight_class.is_custom  %}
+            Single Class
+          {% elif row.weight_class.weight_d == "u" %}
+            u{{ row.weight_class.name|floatformat:"-1" }}
+          {% elif row.weight_class.weight_d == "+" %}
+            {{ row.weight_class.name|floatformat:"-1" }}+
+          {% else %}
+            {{ row.weight_class.name|floatformat:"-1" }}
+          {% endif %}
+        </strong>
                                                 </td>
                                                 {% for event in events %}
                                                 <td class="text-center">
